 - Fix for SF bug [2495728] 'My Account' disappears following exports
 - Update XMLUI Google Analytics code to match latest tracking code
 - Fix for SF bug [1606439] Exception handling for deleting a metadata field
 - [2513300] Fix for bug [1774958] Nested folders do not export correctly
 - Fix for SF bug [2086481] xmlui Administrative log in as another eperson

(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
 - [2057378] Hierarchical LDAP support

(Paul Needham / Jon Bell / Stuart Lewis)
 - Inclusion of uketd_dc OAI-PMH crosswalk

(Yin Latt)
 - SF bug [1931796] DSpace 1.5 Controlled Vocab (edit-metadata.jsp) not working on first box in twobox
 - SF bug [2137425] DSpace 1.5.1(XMLUI) Wrong dir usage of StatisticsLoader

(Claudia Juergen)
 - [2041754] Feature Request #1896717 Registration notification missing information about instance
 - Fix for SF Bug #1775059 Repeated execution of chooser.jsp exhausts db conn pool
 - Fix for SF Bug #2352146 2 Authentications with LoginPage cause connection exhaust
 - Fixed hardcoded metadata language qualifier in DescribeStep to use default.language configuration parameter
 - Fix for SF Bug #2125833 News stored not language dependend (code change in dspace-api-lang googlecode)
 - Fix for SF Bug #2343849 DSQuery invalid check for empty query string
 - Fix for SF Bug #1725817 Error in authorization to submit when you add collection.
   Avoids that groups can be added to themselves.
 - Fix for SF Bug #1968082 SWORD Service Document fails if Collection is untitled
 - Fix for SF Bug #2493794 Hardcoded Strings in DSQuery
 - Fix for SF Bug #1745573 Itemmap-browse.jsp throws Exception on items without date
 - Fix for SF Bug #1571645 NullPointerException possible in review.jsp
 - Fix for SF Bug #2413800 Improper display of Umlauts / Encoding of messages_de.xml
 - SF Patch #2526153 Hardcoded String in jspui browse
 - Fix for SF Bug #2512868 Double quote problem in some fields of JSPUI