@@ -15,6 +15,7 @@
  - Fix for SF bug [1606439] Exception handling for deleting a metadata field
  - [2513300] Fix for bug [1774958] Nested folders do not export correctly
  - Fix for SF bug [2086481] xmlui Administrative log in as another eperson
+ - Fix for SF bug [2155479] Submission verify page handles dc.identifier.* incorrectly
 
 (Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
  - [2057378] Hierarchical LDAP support
